tests/typing/good/testfile-shadowing-1.scala
class D() { def m(x: Int) { var x = true } }
object Main { def main(args: Array[String]) { } }
