tests/typing/bad/testfile-context_block-1.scala
class A { def m() { { var i = 0 }; i = 1 } }
object Main { def main(args: Array[String]) { } }
